--- a/web/package.json
+++ b/web/package.json
@@ -16,8 +16,8 @@
     "react-icons": "^3.11.0",
     "react-leaflet": "^2.7.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.3",
-    "typescript": "~3.7.2"
+    "react-scripts": "^3.4.3",
+    "typescript": "^4.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -41,6 +41,7 @@
     ]
   },
   "devDependencies": {
+    "@material-ui/core": "^4.11.0",
     "@types/react-leaflet": "^2.5.2",
     "@types/react-router-dom": "^5.1.6"
   }
