--- a/web/package.json
+++ b/web/package.json
@@ -10,14 +10,18 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "@types/react-input-mask": "^2.0.5",
     "axios": "^0.20.0",
     "leaflet": "^1.7.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-icons": "^3.11.0",
+    "react-input-mask": "^3.0.0-alpha.2",
     "react-leaflet": "^2.7.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.3",
+    "react-switch": "^5.0.1",
+    "styled-components": "^5.2.0",
     "typescript": "^4.0.3"
   },
   "scripts": {
@@ -44,6 +48,7 @@
   "devDependencies": {
     "@material-ui/core": "^4.11.0",
     "@types/react-leaflet": "^2.5.2",
-    "@types/react-router-dom": "^5.1.6"
+    "@types/react-router-dom": "^5.1.6",
+    "@types/styled-components": "^5.1.4"
   }
 }
